--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ resources/complex
 resources/tracks
 resources/mm10_promoters_v2.gff.gz
 resources/mm10_TSC_v2.gff.gz
+resources/interactive_trees
 tmp
 results
 .snakemake
