--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -34,15 +34,21 @@ def get_tfs(genome):
 
     return list(experiment_tf.antigen.unique())
 
+def get_tfs_st_exp_gt1(genome):
+    experiment_tf = get_chip_table(genome)
+    experiment_tf.loc[:,'N'] = [(experiment_tf.antigen==tf).sum() for tf in experiment_tf.antigen]
+
+    return list(experiment_tf.loc[experiment_tf.N>1,:].antigen.unique())
+
 rule all:
     input:
-        #"results/fig/hist_experiment_QC.pdf",
-        #expand("resources/experimentList_{genome}_TFs_only_QC_filtered.tab",genome=['mm10']),
-        #expand( 'results/TF_tensors/mm10/{tf}.hdf5', tf=get_tfs('mm10') )
-        #expand( 'results/TF_tensors/hg19/{tf}.hdf5', tf=get_tfs('hg19') )
-        #expand( 'results/TF_tensors/hg38/{tf}.hdf5', tf=get_tfs('hg38') )
-        expand('results/svd/mm10/{tf}.hdf5', tf=get_tfs('mm10') )
-        #expand('results/fig/svd/mm10/{tf}.pdf', tf=get_tfs('mm10') )
+        "results/fig/hist_experiment_QC.pdf",
+        expand("resources/experimentList_{genome}_TFs_only_QC_filtered.tab",genome=['hg38']),
+        #expand('results/mm10/TF_tensors/{tf}.hdf5', tf=get_tfs('mm10') ),
+        expand('results/hg38/TF_tensors/{tf}.hdf5', tf=get_tfs('hg38') ),
+        #expand('results/mm10/svd/{tf}.hdf5', tf=get_tfs('mm10') ),
+        #expand('results/fig/mm10/svd/{tf}.pdf', tf=get_tfs_st_exp_gt1('mm10') )
+        #expand( 'results/hg38/TF_tensors/{tf}.hdf5', tf=get_tfs('hg38') )
 
 rule GeneID_GeneName_Synonym_dict:
     input:
@@ -57,23 +63,27 @@ rule get_mm10_TF_list:
         TFs="/bigdata/jbreda/genome/mm10_TF_ID_list.csv",
         gene_dict="/bigdata/jbreda/genome/mm10/mm10_GeneID_GeneName_Synonyms_dict.txt"
     output:
-        "/bigdata/jbreda/genome/mm10_TF_list.csv"
+        TFs="/bigdata/jbreda/genome/mm10_TF_list.csv"
     shell:
         """
-        python scripts/get_mm_TF_list.py --infile_tf {input.TFs} --infile_gene_dict {input.gene_dict} --outfile {output}
+        python scripts/get_mm_TF_list.py --infile_tf {input.TFs} --infile_gene_dict {input.gene_dict} --outfile {outpu.TFs}
         cp {output} /bigdata/jbreda/genome/mm39_TF_list.csv
         """
 
 rule plot_chip_experiments_stats_QC:
     input:
-        "resources/experimentList.tab"
+        chip="resources/experimentList.tab"
     output:
         antigen_class_per_genome="results/fig/hist_antigen_class_per_genome.pdf",
         QC="results/fig/hist_experiment_QC.pdf"
     params:
-        genomes=config['Genome']
+        genomes=config['Genome'],
+        th_reads=config['Threshold']['n_reads'],
+        th_mapped_reads=config['Threshold']['f_mapped_reads'],
+        th_duplicates=config['Threshold']['f_duplicates'],
+        th_peaks=config['Threshold']['n_peaks']
     shell:
-        "python scripts/plot_chip_atlas_stats.py --infile {input} --outfig_antigen_class_per_genome {output.antigen_class_per_genome} --outfig_QC {output.QC} --genomes {params.genomes}"
+        "python scripts/plot_chip_atlas_stats.py --infile {input.chip} --outfig_antigen_class_per_genome {output.antigen_class_per_genome} --outfig_QC {output.QC} --genomes {params.genomes}  --th_reads {params.th_reads} --th_mapped_reads {params.th_mapped_reads} --th_duplicates {params.th_duplicates} --th_peaks {params.th_peaks}"
 
 checkpoint get_ChIP_experiments_TF_QC_filtered:
     input:
@@ -86,50 +96,53 @@ checkpoint get_ChIP_experiments_TF_QC_filtered:
         th_reads=config['Threshold']['n_reads'],
         th_mapped_reads=config['Threshold']['f_mapped_reads'],
         th_duplicates=config['Threshold']['f_duplicates'],
-        th_peaks=config['Threshold']['n_peaks']
+        th_peaks=config['Threshold']['n_peaks'],
+        th_exp_per_tf=config['Threshold']['n_exp_per_tf']
     shell:
         """
-        python scripts/get_experimentList_TF.py --infile_chip {input.chip} --infile_tfs {input.tfs} --infile_gene_dict {input.gene_dict} --outfile {output} --genome {wildcards.genome} --th_reads {params.th_reads} --th_mapped_reads {params.th_mapped_reads} --th_duplicates {params.th_duplicates} --th_peaks {params.th_peaks}
+        python scripts/get_experimentList_TF.py --infile_chip {input.chip} --infile_tfs {input.tfs} --infile_gene_dict {input.gene_dict} --outfile {output} --genome {wildcards.genome} --th_reads {params.th_reads} --th_mapped_reads {params.th_mapped_reads} --th_duplicates {params.th_duplicates} --th_peaks {params.th_peaks} --th_exp_per_tf {params.th_exp_per_tf}
         """
 
-#rule track_hub_all_TFs:
+# Now download data: download_chip_data.sh -> check_tracks.py -> redownload_error_chip_data.sh
 
 rule make_tf_tensors:
     input:
         infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# only for dependency
         exp_list=get_experiments
     output:
-        tensor='results/TF_tensors/{genome}/{tf}.hdf5',
-        failed='results/TF_tensors/{genome}/{tf}_failed.txt'
+        tensor='results/{genome}/TF_tensors/{tf}.hdf5'
     params:
         window_kb=config['Window_kb'],
         bin_size=config['bin_size']
-    threads: 2
+    threads: 1
     shell:
         """
-        python scripts/make_chip_promoter_experiment_tensors.py --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {params.window_kb} --bin_size {params.bin_size} --outfile {output.tensor} --outfile_failed {output.failed} --infiles_tf {input.exp_list}
+        python scripts/make_chip_promoter_experiment_tensors.py --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {params.window_kb} --bin_size {params.bin_size} --outfile {output.tensor} --infiles_tf {input.exp_list}
         """
 
 rule svd:
     input:
-        'results/TF_tensors/{genome}/{tf}.hdf5'
+        tensor='results/{genome}/TF_tensors/{tf}.hdf5'
     output:
-        'results/svd/{genome}/{tf}.hdf5'
+        svd='results/{genome}/svd/{tf}.hdf5'
     threads: 24
     shell:
         """
-        python scripts/get_Chip_svd.py --tf {wildcards.tf} --infile {input} --outfile {output}
+        python scripts/get_Chip_svd.py --infile {input.tensor} --outfile {output.svd}
         """
 
 rule plot_svd:
     input:
-        'results/svd/{genome}/{tf}.hdf5'
+        svd='results/{genome}/svd/{tf}.hdf5'
     output:
-        'results/fig/svd/{genome}/{tf}.pdf'
+        fig='results/fig/{genome}/svd/{tf}.pdf'
     shell:
         """
-        python scripts/plot_svd_per_tf.py --tf {wildcards.tf} --infile {input} --outfig {output}
+        python scripts/plot_svd_per_tf.py --infile {input.svd} --outfig {output.fig}
         """
 
-#rule multivariate_gaussian:
+# rule Chip 1st comp. matrix:
+#   get_chip_1st_svd_matrix_plot_signal_distribution.py
+# rule multivariate_gaussian:
+#   Multivariate_gaussian_gene_factor.py
 
