ChIP peaks and signal pm5kb

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -48,10 +48,16 @@ def get_tfs_st_exp_gt1(genome):
 
 rule all:
     input:
-        "results/fig/hist_experiment_QC.pdf",
+        #"results/fig/hist_experiment_QC.pdf",
         #expand("resources/experimentList_{genome}_TFs_only_QC_filtered.tab",genome=['mm10','hg38']),
-        expand('results/mm10/TF_tensors//{tf}.hdf5', tf=get_tfs('mm10') ),
-        #expand('results/hg38/TF_tensors/{tf}.hdf5', tf=get_tfs('hg38') ),
+        #
+        #expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/E2f1.hdf5', window_kb=config['Window_kb']),
+        #
+        expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10') ),
+        expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
+        expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('mm10') ),
+        expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
         #expand('results/mm10/svd/{tf}.hdf5', tf=get_tfs('mm10') ),
         #expand('results/hg38/svd/{tf}.hdf5', tf=get_tfs('hg38') ),
         #expand('track_hubs/{file}',file=config['Track_hub']['outfiles']),
@@ -125,24 +131,33 @@ checkpoint get_ChIP_experiments_TF_QC_filtered:
         """
 
 # First download data: download_chip_data.sh -> check_tracks.py -> redownload_error_chip_data.sh
-rule make_tf_tensors:
+# Or rsync between servers
+rule make_chip_tensors:
     input:
         infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# only for dependency
         exp_list=get_experiments_bw
     output:
-        tensor='results/{genome}/TF_tensors/Window_pm_{window_kb}_bin_size_{bin_size}/{tf}.hdf5'
-    params:
-        window_kb=config['Window_kb'],
-        bin_size=config['bin_size']
+        tensor='results/{genome}/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5'
     threads: 12
     shell:
         """
-        python scripts/make_chip_promoter_experiment_tensors.py --threads {threads} --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {params.window_kb} --bin_size {params.bin_size} --outfile {output.tensor} --infiles_tf {input.exp_list}
+        python scripts/make_chip_promoter_experiment_tensors.py --threads {threads} --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {wildcards.window_kb} --bin_size {wildcards.bin_size} --outfile {output.tensor} --infiles_tf {input.exp_list}
+        """
+
+rule make_peak_tensors:
+    input:
+        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# only for dependency
+        exp_list=get_experiments_bb
+    output:
+        tensor='results/{genome}/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5'
+    shell:
+        """
+        python scripts/make_peak_promoter_experiment_tensors.py --tf {wildcards.tf} --genome {wildcards.genome} --window_kb {wildcards.window_kb} --outfile {output.tensor} --infiles_tf {input.exp_list}
         """
 
 rule svd:
     input:
-        tensor='results/{genome}/TF_tensors/{tf}.hdf5'
+        tensor='results/{genome}/Chip_tensors/{tf}.hdf5'
     output:
         svd='results/{genome}/svd/{tf}.hdf5'
     params:
