--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -51,12 +51,12 @@ rule all:
         #"results/fig/hist_experiment_QC.pdf",
         #expand("resources/experimentList_{genome}_TFs_only_QC_filtered.tab",genome=['mm10','hg38']),
         #
-        #expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/ZUFSP.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #
         #expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10') ),
-        expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
+        #expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
         #expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('mm10') ),
-        expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
+        #expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
         #
         #expand('results/mm10/svd/{tf}.hdf5', tf=get_tfs('mm10') ),
         #expand('results/hg38/svd/{tf}.hdf5', tf=get_tfs('hg38') ),
