--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -48,23 +48,25 @@ def get_tfs_st_exp_gt1(genome):
 
 rule all:
     input:
-        #"results/fig/hist_experiment_QC.pdf",
-        #expand("resources/experimentList_{genome}_TFs_only_QC_filtered.tab",genome=['mm10','hg38']),
         #
-        expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
         #
         #expand('results/mm10/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10') ),
         #expand('results/hg38/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('hg38') ),
         #expand('results/mm10/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('mm10') ),
         #expand('results/hg38/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5', window_kb=config['Window_kb'], tf=get_tfs('hg38') ),
-        #
-        #expand('results/mm10/svd/{tf}.hdf5', tf=get_tfs('mm10') ),
-        #expand('results/hg38/svd/{tf}.hdf5', tf=get_tfs('hg38') ),
         #expand('track_hubs/{file}',file=config['Track_hub']['outfiles']),
-        #expand('results/fig/mm10/svd/{tf}.pdf', tf=get_tfs_st_exp_gt1('mm10') ),
-        #expand('results/fig/hg38/svd/{tf}.pdf', tf=get_tfs_st_exp_gt1('hg38') ),
+        #
+        #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/E2f1.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #
+        #expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10')),
+        #expand('results/fig/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs('mm10')),
+        #expand('results/fig/hg38/Window_pm{window_kb}kb_bin_size_{bin_size}/svd/{tf}.pdf', window_kb=config['Window_kb'], bin_size=config['Bin_size'], tf=get_tfs_st_exp_gt1('hg38')),
+        #
+        expand('results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TF_mode_pos_prom.hdf5', window_kb=config['Window_kb'], bin_size=config['Bin_size']),
+        #
         #expand('results/{genome}/TF_Complex.tsv',genome=['mm10','hg38'])
-        #expand('results/{genome}/tensor_TFsvd1_posbin_prom.hdf5',genome=['mm10','hg38']),
         #expand('results/fig/{genome}/mean_chip_signal_per_promoter_per_tf.pdf',genome=['mm10','hg38'])
         #expand('results/mm10/TF_bedfiles/{tf}.bed', tf=get_tfs('mm10') ),
         #expand('results/hg38/TF_bedfiles/{tf}.bed', tf=get_tfs('hg38') ),
@@ -72,67 +74,12 @@ rule all:
         #expand('results/hg38/TF_prom_bedfiles/{tf}.bed', tf=get_tfs('hg38') )
 
 
-# Make GeneID to GeneName dictionary
-rule GeneID_GeneName_Synonym_dict:
-    input:
-        "/bigdata/jbreda/genome/{genome}/{genome}_ENSID_Genename_synonyms.txt.gz"
-    output:
-        "/bigdata/jbreda/genome/{genome}/{genome}_GeneID_GeneName_Synonyms_dict.txt",
-    shell:
-        "python scripts/get_GeneID_GeneName_Synonym_dict.py --infile {input} --outfile {output}"
 
-rule get_mm10_TF_list:
-    input:
-        TFs="/bigdata/jbreda/genome/mm10_TF_ID_list.csv",
-        gene_dict="/bigdata/jbreda/genome/mm10/mm10_GeneID_GeneName_Synonyms_dict.txt"
-    output:
-        TFs="/bigdata/jbreda/genome/mm10_TF_list.csv"
-    shell:
-        """
-        python scripts/get_mm_TF_list.py --infile_tf {input.TFs} --infile_gene_dict {input.gene_dict} --outfile {outpu.TFs}
-        cp {output} /bigdata/jbreda/genome/mm39_TF_list.csv
-        """
-
-# Plot all QC stats for all genomes
-rule plot_chip_experiments_stats_QC:
-    input:
-        chip="resources/experimentList.tab"
-    output:
-        antigen_class_per_genome="results/fig/hist_antigen_class_per_genome.pdf",
-        QC="results/fig/hist_experiment_QC.pdf"
-    params:    
-        genomes=config['Genome'],
-        th_reads=config['Threshold']['n_reads'],
-        th_mapped_reads=config['Threshold']['f_mapped_reads'],
-        th_duplicates=config['Threshold']['f_duplicates'],
-        th_peaks=config['Threshold']['n_peaks']
-    shell:
-        "python scripts/plot_chip_atlas_stats.py --infile {input.chip} --outfig_antigen_class_per_genome {output.antigen_class_per_genome} --outfig_QC {output.QC} --genomes {params.genomes}  --th_reads {params.th_reads} --th_mapped_reads {params.th_mapped_reads} --th_duplicates {params.th_duplicates} --th_peaks {params.th_peaks}"
-
-# Fliter experiment list based on QC thresholds
-checkpoint get_ChIP_experiments_TF_QC_filtered:
-    input:
-        chip="resources/experimentList.tab",
-        tfs="/bigdata/jbreda/genome/{genome}_TF_list.csv",
-        gene_dict="/bigdata/jbreda/genome/{genome}/{genome}_ENSID_Genename_synonyms.txt.gz"
-    output:
-        "resources/experimentList_{genome}_TFs_only_QC_filtered.tab"
-    params:
-        th_reads=config['Threshold']['n_reads'],
-        th_mapped_reads=config['Threshold']['f_mapped_reads'],
-        th_duplicates=config['Threshold']['f_duplicates'],
-        th_peaks=config['Threshold']['n_peaks'],
-        th_exp_per_tf=config['Threshold']['n_exp_per_tf']
-    shell:
-        """
-        python scripts/get_experimentList_TF.py --infile_chip {input.chip} --infile_tfs {input.tfs} --infile_gene_dict {input.gene_dict} --outfile {output} --genome {wildcards.genome} --th_reads {params.th_reads} --th_mapped_reads {params.th_mapped_reads} --th_duplicates {params.th_duplicates} --th_peaks {params.th_peaks} --th_exp_per_tf {params.th_exp_per_tf}
-        """
-
-# First download data: download_chip_data.sh -> check_tracks.py -> redownload_error_chip_data.sh
+# First download data: workflow/Dowload_experiments.smk
 # Or rsync between servers
 rule make_chip_tensors:
     input:
-        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# only for dependency
+        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# Dependence: used in get_experiments_bw
         exp_list=get_experiments_bw
     output:
         tensor='results/{genome}/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5'
@@ -144,7 +91,7 @@ rule make_chip_tensors:
 
 rule make_peak_tensors:
     input:
-        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# only for dependency
+        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# Dependence: used in get_experiments_bb
         exp_list=get_experiments_bb
     output:
         tensor='results/{genome}/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5'
@@ -155,9 +102,9 @@ rule make_peak_tensors:
 
 rule make_peak_table:
     input:
-        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",# only for dependency
+        infile="resources/experimentList_{genome}_TFs_only_QC_filtered.tab" # only for dependency
     output:
-        table='results/{genome}/peak_table_pm{window_kb}kb.txt
+        table="results/{genome}/peak_table_pm{window_kb}kb.txt"
     params:
         promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
     shell:
@@ -167,22 +114,21 @@ rule make_peak_table:
 
 rule svd:
     input:
-        tensor='results/{genome}/Chip_tensors/{tf}.hdf5'
+        chip='results/{genome}/Chip_tensors/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5',
+        peak='results/{genome}/Peak_tensors/Window_pm{window_kb}kb/{tf}.hdf5'
     output:
-        svd='results/{genome}/svd/{tf}.hdf5'
-    params:
-        size_factor=config['Normalization']['size_factor']
+        svd='results/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5'
     threads: 12
     shell:
         """
-        python scripts/get_Chip_svd.py --infile {input.tensor} --outfile {output.svd} --size_factor {params.size_factor}
+        python scripts/get_Chip_svd.py --infile_chip {input.chip} --infile_peak {input.peak} --outfile {output.svd} --window_kb {wildcards.window_kb} --bin_size {wildcards.bin_size}
         """
 
 rule plot_svd:
     input:
-        svd='results/{genome}/svd/{tf}.hdf5'
+        svd='results/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.hdf5'
     output:
-        fig='results/fig/{genome}/svd/{tf}.pdf'
+        fig='results/fig/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{tf}.pdf'
     shell:
         """
         python scripts/plot_svd_per_tf.py --infile {input.svd} --outfig {output.fig} 
@@ -200,6 +146,45 @@ rule make_track_hubs:
         python scripts/make_track_hubs.py
         """
 
+rule get_chip_tf_mode_pos_prom:
+    input:
+        svd=expand('results/{{genome}}/svd/Window_pm{{window_kb}}kb_bin_size_{{bin_size}}/{tf}.hdf5',tf=get_tfs({{genome}})),
+        chip="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",
+        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
+    output:
+        tensor_tf_pos_prom='results/mm10/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TF_mode_pos_prom.hdf5',
+    threads: 12
+    shell:
+        """
+        python scripts/get_chip_svd_matrix.py --infile_chip {input.chip} \
+                                              --infile_promoterome {input.promoterome} \
+                                              --outfile_tf_pos_prom {output.tensor_tf_pos_prom} \
+                                              --infiles_svd {input.svd} \
+                                              --genome {wildcards.genome} \
+                                              --window_kb {wildcards.window_kb}
+        """
+
+# rule Chip 1st comp. matrix:
+rule get_chip_1st_comp:
+    input:
+        chip="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",
+        promoterome="/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered.bed"
+    output:
+        tensor_tf_pos_prom='results/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/tensor_TFsvd1_tf_binnedpos_prom.hdf5',
+        fig='results/fig/{genome}/mean_chip_signal_per_promoter_per_tf.pdf'
+    threads: 12
+    shell:
+        """
+        python scripts/get_chip_1st_svd_matrix_plot_signal_distribution.py --infile_chip {input.chip} \
+                                                                           --infile_promoterome {input.promoterome} \
+                                                                           --outfile_tf_binnedpos_prom {output.file_tf_binnedPos_prom} \
+                                                                           --outfile_tf_pos_prom {output.file_tf_pos_prom} \
+                                                                           --outfig {output.fig} \
+                                                                           --genome {wildcards.genome} \
+                                                                           --window_kb {wildcards.window_kb}
+        """
+
+
 # run this rule only after downloading data with ./download_complex_data.sh
 rule get_tf_complex:
     input:
@@ -211,23 +196,6 @@ rule get_tf_complex:
     shell:
         """
         python scripts/get_complex_proteins.py  --infile_complex {params.complexes} --infile_chip {input.chip} --outfile {output.results}
-        """
-
-# rule Chip 1st comp. matrix:
-rule get_chip_1st_comp:
-    input:
-        chip="resources/experimentList_{genome}_TFs_only_QC_filtered.tab",
-        promoterome="/home/jbreda/Promoterome/results/{{genome}}/promoterome_pm{win}kb_filtered.bed".format(win = config['Window_kb'])
-    output:
-        file_tf_binnedPos_prom='results/{genome}/tensor_TFsvd1_tf_binnedpos_prom.hdf5',
-        file_tf_pos_prom='results/{genome}/tensor_TFsvd1_tf_pos_prom.npy',
-        fig='results/fig/{genome}/mean_chip_signal_per_promoter_per_tf.pdf'
-    params:
-        window_kb = config['Window_kb']
-    threads: 12
-    shell:
-        """
-        python scripts/get_chip_1st_svd_matrix_plot_signal_distribution.py --infile_chip {input.chip} --infile_promoterome {input.promoterome} --outfile_tf_binnedpos_prom {output.file_tf_binnedPos_prom} --outfile_tf_pos_prom {output.file_tf_pos_prom} --outfig {output.fig} --genome {wildcards.genome} --window_kb {params.window_kb}
         """
         
 # rule multivariate_gaussian:
